Set the dialog fixed, so it will be visible even if you have scrolled

--- a/creative_comments.css
+++ b/creative_comments.css
@@ -1,6 +1,6 @@
 #creativeCommentsHolder {
 	z-index: 999999;
-	position: absolute;
+	position: fixed;
 	top: 20px;
 	left: 0;
 	width: 100%;
